force-app/main/default/objects/FEC_Case_Flow_History__c/FEC_Case_Flow_History__c.object-meta.xml
<CustomObject>
    <description>Object dùng để lưu thông tin trên Case (NOC và các field) sau khi submit, phục vụ process GSR &amp; COF</description>
    <label>Case Flow History</label>
    <nameField>
        <displayFormat>CFH-{0}</displayFormat>
        <label>CFH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Flow History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>