force-app/main/default/objects/FEC_Case_Flow_History__c/fields/FEC_Field_List__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_List__c</fullName>
    <label>Field List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>