force-app/main/default/objects/FEC_Case_Flow_History__c/fields/FEC_Nature_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_of_Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nature of Cases</label>
    <referenceTo>FEC_Nature_of_Case__c</referenceTo>
    <relationshipLabel>Case Flow History</relationshipLabel>
    <relationshipName>Case_Flow_History</relationshipName>
    <type>Lookup</type>
</CustomField>